--- a/taocan/package.json
+++ b/taocan/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "element-ui": "^1.3.5",
+    "iview": "^2.0.0-rc.16",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1"
   },
