--- a/taocan/package.json
+++ b/taocan/package.json
@@ -10,13 +10,15 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "vue": "^2.3.3",
     "element-ui": "^1.3.5",
     "iview": "^2.0.0-rc.16",
-    "vue": "^2.3.3",
+    "vee-validate": "^2.0.0-beta.17",
     "vue-router": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
+    "axios": "^0.16.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-runtime": "^6.22.0",
@@ -41,9 +43,11 @@
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "url-loader": "^0.5.8",
+    "vue-form-generator": "^2.0.0-beta8",
     "vue-loader": "^12.1.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.3",
+    "vue-validator": "^3.0.0-alpha.2",
     "vuedraggable": "^2.13.0",
     "webpack": "^2.6.1",
     "webpack-bundle-analyzer": "^2.2.1",
